Multiple minor fixes as well as added code comments for all methods, classes and pages that I have create for the project so far. Fixed textfield for password entry to passwordfield. Fixed majority of warnings (18/28 Warnings resolved)

--- a/src/main/resources/com/example/real_estate_software/PropertyDashboard.fxml
+++ b/src/main/resources/com/example/real_estate_software/PropertyDashboard.fxml
@@ -5,6 +5,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<!-- The Property Dashboard FXML was created in Scenebuilder which allows the Owner to manage an individual property-->
+<!-- The owner will be able to view all statistical data regarding the number of tenants, total rental income, bond amount -->
+<!-- Owner can also assign a car spot to the property and additional rent for this as well as showcases the property value -->
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
       prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1"
