--- a/src/main/resources/com/example/real_estate_software/CreateAccount.fxml
+++ b/src/main/resources/com/example/real_estate_software/CreateAccount.fxml
@@ -7,6 +7,10 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<!-- The Create Account FXML was created in Scenebuilder which allows the Owner to create an account and save the details to the Database-->
+<!-- The owner will be able to enter in the following details -->
+<!-- Owner First and Last Name, Email Address and password -->
+
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.CreateAccountController">
     <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="300.0" layoutX="44.0" layoutY="68.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />
     <Text layoutX="121.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" />
