--- a/src/main/resources/com/example/real_estate_software/Rent.fxml
+++ b/src/main/resources/com/example/real_estate_software/Rent.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<!-- The Rent FXML was created in Scenebuilder which allows the Owner to assign rent to the tenants associated with the property-->
+<!-- The owner will be able to view the number of tenants and assign individual rent amounts and the frequency of the payments -->
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
       prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1"
