--- a/src/main/resources/com/example/real_estate_software/charts.fxml
+++ b/src/main/resources/com/example/real_estate_software/charts.fxml
@@ -37,7 +37,7 @@
                     </yAxis>
                 </BarChart>
 
-                <Button fx:id = "backButton" layoutX="14.0" layoutY="55.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
+                <Button fx:id = "backButton" layoutX="14.0" layoutY="55.0" mnemonicParsing="false" text="Back" onAction="#handleBackButtonClick"/>
             </VBox>
 
 
