--- a/src/main/resources/com/example/real_estate_software/RemoveTenant.fxml
+++ b/src/main/resources/com/example/real_estate_software/RemoveTenant.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.text.Text?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21"             xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.example.real_estate_software.controller.RemoveTenantController">
       <Text layoutX="221.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Remove Tenant">
          <font>
             <Font size="24.0" />
@@ -38,7 +39,7 @@
          </font>
       </Text>
       <Button layoutX="465.0" layoutY="187.0" mnemonicParsing="false" text="Remove Tenant" />
-      <Button layoutX="14.0" layoutY="16.0" mnemonicParsing="false" text="Back" />
+      <Button fx:id="backButton" layoutX= "14.0" layoutY="16.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
       <Text layoutX="42.0" layoutY="343.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tenant: ">
          <font>
             <Font size="18.0" />
