--- a/src/main/resources/com/example/real_estate_software/MainDashboard.fxml
+++ b/src/main/resources/com/example/real_estate_software/MainDashboard.fxml
@@ -90,8 +90,12 @@
          </font>
       </Label>
    </Pane>
-   <HBox spacing="15" alignment="CENTER_RIGHT" prefHeight="65.0" prefWidth="705.0"
-         AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+
+
+   <HBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="708.0" alignment="CENTER_RIGHT" styleClass="top-border">
+      <!-- Expandable space to push buttons to the right -->
+      <Pane HBox.hgrow="ALWAYS"/>
+
 
       <!-- Search Button -->
       <Button fx:id="searchButton" styleClass="icon-button" onAction="#handleSearchClick">
@@ -106,7 +110,6 @@
             <FontIcon iconLiteral="fas-bell" iconSize="12" styleClass="fontawesomeicon"/>
          </graphic>
       </Button>
-
 
       <!-- Settings Button -->
       <Button fx:id="settingsTopButton" styleClass="icon-button" onAction="#handleSettingsTopClick">
@@ -128,10 +131,9 @@
             <FontIcon iconLiteral="fas-plus" iconSize="12" styleClass="fontawesomeicon"/>
          </graphic>
       </Button>
-
    </HBox>
 
-   <Button fx:id="addPropertyButton" layoutX="215.0" layoutY="73.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="166.0"
+   <Button fx:id="addPropertyButton" layoutX="220.0" layoutY="78.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="166.0"
            styleClass="add-button" text="ADD NEW PROPERTY" textFill="#549cc9" onAction="#handleAddPropertyClick">
       <font>
          <Font size="8.0"/>
@@ -139,15 +141,15 @@
    </Button>
 
 
-   <FontIcon iconLiteral="fas-plus" layoutX="225.0" layoutY="93.0"/>
+   <FontIcon iconLiteral="fas-plus" layoutX="230.0" layoutY="100.0"/>
 
    <GridPane fx:id="propertyGrid" layoutX="92.0" layoutY="117.0" hgap="15.0" vgap="15.0">
 
 
    </GridPane>
-   <Label layoutX="81.0" layoutY="23.0" text="Properties">
+   <Label layoutX="300.0" layoutY="27.0" text="Properties">
       <font>
-         <Font name="Bodoni 72 Book" size="24.0"/>
+         <Font name="Bodoni 72 Book" size="28.0"/>
       </font>
    </Label>
 </AnchorPane>
