--- a/src/main/resources/com/example/real_estate_software/EditProperty.fxml
+++ b/src/main/resources/com/example/real_estate_software/EditProperty.fxml
@@ -1,38 +1,134 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+
+
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
+
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+
 <?import javafx.scene.text.Text?>
 
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.VBox?>
+
 <?import javafx.scene.control.ListView?>
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.EditPropertyController">
-    <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="300.0" layoutX="44.0" layoutY="59.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />
-    <ListView fx:id="propertyListView" layoutX="54.0" layoutY="69.0" maxHeight="250" maxWidth="200"/>
-    <Text layoutX="290.0" layoutY="90.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
-    <TextField fx:id="addressField" layoutX="380.0" layoutY="80.0" />
-    <Text layoutX="290.0" layoutY="126.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tenants" />
-    <TextField fx:id="tenantField" layoutX="380.0" layoutY="116.0" />
-    <Text layoutX="290.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Beds" />
-    <TextField fx:id="bedsField" layoutX="380.0" layoutY="152.0" />
-    <Text layoutX="290.0" layoutY="198.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baths" />
-    <TextField fx:id="bathsField" layoutX="380.0" layoutY="188.0" />
-    <Text layoutX="290.0" layoutY="234.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cars" />
-    <TextField fx:id="carsField" layoutX="380.0" layoutY="224.0" />
-    <Text layoutX="290.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rent" />
-    <TextField fx:id="rentField" layoutX="380.0" layoutY="260.0" />
-    <Text layoutX="290.0" layoutY="306.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Utilities" />
-    <TextField fx:id="utilitiesField" layoutX="380.0" layoutY="296.0" />
-    <Text layoutX="186.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Property" textAlignment="CENTER">
+
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.real_estate_software.controller.EditPropertyController">
+
+
+    <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
+
+        <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
+                <padding>
+                    <Insets left="8.0" right="12.0"/>
+                </padding>
+                <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+            </HBox>
+        </HBox>
+
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="editButton" styleClass="icon-button" onAction="#handleEditClick">
+                <graphic>
+                    <FontIcon iconLiteral="far-edit" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="settingsButton" styleClass="icon-button" onAction="#handleSettingsClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-cogs" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+
+
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="viewStatsButton" onAction="#handleViewStatsClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-chart-bar" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+
+
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="signOutButton" styleClass="icon-button" onAction="#handleSignOutClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-sign-out-alt" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+
+        <Label layoutX="4.0" layoutY="5.0" styleClass="HOME" text="ESTATE" textFill="#c6baba">
+            <font>
+                <Font name="Hoefler Text Black" size="14.0"/>
+            </font>
+        </Label>
+    </Pane>
+
+
+    <Rectangle arcHeight="10.0" arcWidth="10.0" fill="#add8ffa2" height="300.0" layoutX="144.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="500.0" />
+    <ListView fx:id="propertyListView" layoutX="154.0" layoutY="119.0" maxHeight="250" maxWidth="200"/>
+    <Text layoutX="390.0" layoutY="140.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" />
+    <TextField fx:id="addressField" layoutX="480.0" layoutY="130.0" />
+    <Text layoutX="390.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tenants" />
+    <TextField fx:id="tenantField" layoutX="480.0" layoutY="166.0" />
+    <Text layoutX="390.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Beds" />
+    <TextField fx:id="bedsField" layoutX="480.0" layoutY="202.0" />
+    <Text layoutX="390.0" layoutY="248.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Baths" />
+    <TextField fx:id="bathsField" layoutX="480.0" layoutY="238.0" />
+    <Text layoutX="390.0" layoutY="284.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cars" />
+    <TextField fx:id="carsField" layoutX="480.0" layoutY="274.0" />
+    <Text layoutX="390.0" layoutY="320.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Rent" />
+    <TextField fx:id="rentField" layoutX="480.0" layoutY="310.0" />
+    <Text layoutX="490.0" layoutY="356.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Utilities" />
+    <TextField fx:id="utilitiesField" layoutX="480.0" layoutY="346.0" />
+
+    <VBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
+
+        <Text layoutX="286.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Edit Property" textAlignment="CENTER">
+
         <font>
-            <Font size="24.0" />
-        </font>
-    </Text>
-    <Button layoutX="144.0" layoutY="328.0" mnemonicParsing="false"  text="Edit Property" onAction="#onEditClick"/>
-    <Button layoutX="249.0" layoutY="328.0" mnemonicParsing="false"  text="Delete Property" onAction="#onDeleteClick"/>
-    <Button fx:id="backButton"  layoutX="364.0" layoutY="328.0" mnemonicParsing="false"  text="Go Back" onAction="#onBackClick"/>
-</Pane>
+                <Font size="24.0"/>
+            </font>
+        </Text>
+    </VBox>
+
+
+    <Button layoutX="244.0" layoutY="378.0" mnemonicParsing="false"  text="Edit Property" onAction="#onEditClick"/>
+    <Button layoutX="349.0" layoutY="378.0" mnemonicParsing="false"  text="Delete Property" onAction="#onDeleteClick"/>
+    <Button fx:id="backButton"  layoutX="464.0" layoutY="378.0" mnemonicParsing="false"  text="Go Back" onAction="#onBackClick"/>
+</AnchorPane>
