--- a/src/main/resources/com/example/real_estate_software/PropertyDashboard.fxml
+++ b/src/main/resources/com/example/real_estate_software/PropertyDashboard.fxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 
-<?import javafx.scene.image.ImageView?>
+
 
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.layout.VBox?>
+
 
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 <?import javafx.geometry.Insets?>
@@ -82,7 +82,7 @@
          </Button>
       </HBox>
    </Pane>
-<HBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
+<VBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
 
    <Text layoutX="199.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Property Dashboard">
 
@@ -90,7 +90,7 @@
          <Font size="24.0"/>
       </font>
    </Text>
-</HBox>
+</VBox>
    <Text layoutX="600.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome NAME"/>
 
    <Button fx:id = "addTenant" layoutX="550.0" layoutY="225.0" mnemonicParsing="false" text="Add Tenant" onAction="#onTenantClick"/>
