--- a/src/main/resources/com/example/real_estate_software/RemoveTenant.fxml
+++ b/src/main/resources/com/example/real_estate_software/RemoveTenant.fxml
@@ -163,7 +163,7 @@
         </Text>
         <Button mnemonicParsing="false" text="Remove Tenant" />
     </VBox>
-    <HBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
+    <VBox layoutX="74" layoutY="0.0" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
 
         <Text layoutX="199.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Remove Tenant">
 
@@ -171,6 +171,6 @@
                 <Font size="24.0"/>
             </font>
         </Text>
-    </HBox>
+    </VBox>
     <Button fx:id="backButton" layoutX="100" layoutY="9.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
 </AnchorPane>
