--- a/src/main/resources/com/example/real_estate_software/PropertyMaintenance.fxml
+++ b/src/main/resources/com/example/real_estate_software/PropertyMaintenance.fxml
@@ -1,30 +1,121 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.VBox ?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0"
+
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="580.0" prefWidth="780.0"
       xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="com.example.real_estate_software.controller.PropertyMaintenanceController">
-      <Text layoutX="254.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Property Maintenance Request">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Text>
-      <Button layoutX="346.0" layoutY="427.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="108.0" text="Add Files">
+
+    <Pane prefHeight="580.0" prefWidth="75.0" styleClass="sidebar" AnchorPane.leftAnchor="0.0">
+
+        <HBox alignment="CENTER" layoutY="94.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <HBox alignment="CENTER" prefHeight="65.0" prefWidth="75.0">
+                <padding>
+                    <Insets left="8.0" right="12.0"/>
+                </padding>
+                <FontIcon iconLiteral="fas-home" iconSize="24" styleClass="fontawesomeicon"/>
+            </HBox>
+        </HBox>
+
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="159.0" prefHeight="65.0" prefWidth="64.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="editButton" styleClass="icon-button" onAction="#handleEditClick">
+                <graphic>
+                    <FontIcon iconLiteral="far-edit" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="224.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="settingsButton" styleClass="icon-button" onAction="#handleSettingsClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-cogs" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+
+
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="289.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="viewStatsButton" onAction="#handleViewStatsClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-chart-bar" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+
+
+        <HBox alignment="CENTER" layoutX="4.0" layoutY="450.0" prefHeight="65.0" prefWidth="75.0">
+            <padding>
+                <Insets left="8.0" right="12.0"/>
+            </padding>
+            <Button fx:id="signOutButton" styleClass="icon-button" onAction="#handleSignOutClick">
+                <graphic>
+                    <FontIcon iconLiteral="fas-sign-out-alt" iconSize="24" styleClass="fontawesomeicon"/>
+                </graphic>
+            </Button>
+        </HBox>
+
+
+        <Label layoutX="4.0" layoutY="5.0" styleClass="HOME" text="ESTATE" textFill="#c6baba">
+            <font>
+                <Font name="Hoefler Text Black" size="14.0"/>
+            </font>
+        </Label>
+    </Pane>
+
+
+    <VBox layoutX="74" prefHeight="75" prefWidth="705.0" alignment="CENTER" styleClass = "top-border">
+
+        <Text layoutX="254.0" layoutY="95.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Property Maintenance Request">
+            <font>
+                <Font size="24.0" />
+            </font>
+        </Text>
+    </VBox>
+
+
+    <Button fx:id = "backButton" layoutX="100.0" layoutY="9.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
+    <Button layoutX="346.0" layoutY="427.0" mnemonicParsing="false" prefHeight="41.0" prefWidth="108.0" text="Add Files">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Text layoutX="68.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Filename Uploaded:">
+      <Text layoutX="80.0" layoutY="164.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Filename Uploaded:">
          <font>
             <Font size="18.0" />
          </font>
       </Text>
-      <Text layoutX="66.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File size:">
+      <Text layoutX="80.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="File size:">
          <font>
             <Font size="18.0" />
          </font>
@@ -39,4 +130,4 @@
             <Font size="16.0" />
          </font>
       </Text>
-</Pane>
+</AnchorPane>
