--- a/src/main/resources/com/example/real_estate_software/AddTenant.fxml
+++ b/src/main/resources/com/example/real_estate_software/AddTenant.fxml
@@ -100,11 +100,6 @@
             </font>
         </Text>
 
-        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="ADDRESS">
-            <font>
-                <Font size="14.0"/>
-            </font>
-        </Text>
     </VBox>
 
 
@@ -112,11 +107,15 @@
 
 
     <Button fx:id = "backButton" layoutX="100.0" layoutY="9.0" mnemonicParsing="false" text="Back" onAction="#onBackClick"/>
-      <TextField layoutX="110.0" layoutY="134.0" text="Tenant First Name" />
-      <TextField layoutX="110.0" layoutY="177.0" prefHeight="26.0" prefWidth="158.0" text="Tenant Last Name" />
-      <TextField layoutX="110.0" layoutY="220.0" text="Tenant Email Address" />
-      <Button fx:id = "saveButton" layoutX="146.0" layoutY="301.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="53.0" text="Save" />
-      <TextField layoutX="110.0" layoutY="262.0" text="Tenant Phone Number" />
+    <Text layoutX="290" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="First Name" />
+    <TextField fx:id="firstNameField" layoutX="110.0" layoutY="135.0" />
+    <Text layoutX="290" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Last Name" />
+    <TextField fx:id="lastNameField" layoutX="110.0" layoutY="175.0" />
+    <Text layoutX="290" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email Address" />
+    <TextField fx:id="emailField" layoutX="110.0" layoutY="220.0" />
+    <Text layoutX="290" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Phone Number" />
+    <TextField fx:id="phoneNumberField" layoutX="110.0" layoutY="260.0" />
+    <Button fx:id = "saveButton" layoutX="146.0" layoutY="301.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="53.0" text="Save" onAction="#onSaveClick" />
 
     <VBox alignment="CENTER" spacing="10" layoutY="134" layoutX="400">
         <ImageView fitHeight="149.0" fitWidth="198.0" pickOnBounds="true" preserveRatio="true">
